# games

./: CMakeLists.txt  main.c  main.cpp  snake.h  test.py
Datas/: dataPack.h  sampleCall.c
headers/: conio.h  kbhit.h  snake.h
pypackage/: getInput.py  testPy.py
